Let's make this package name more specific

--- a/upm/package.json
+++ b/upm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.seconddinner.unity-lfs-bug",
+  "name": "com.seconddinner.upm-lfs-bug",
   "displayName": "LFS Bug",
   "version": "1.0.0",
   "unity": "2019.3",
