Fixed package name
Probably should be me and not my company in there huh?

--- a/upm/package.json
+++ b/upm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.seconddinner.upm-lfs-bug",
+  "name": "com.mikerochip.upm-lfs-bug",
   "displayName": "LFS Bug",
   "version": "1.0.0",
   "unity": "2019.3",
